--- a/styles.css
+++ b/styles.css
@@ -273,10 +273,10 @@ footer {
 }
 
 /* Responsive styles */
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .container {
     padding: 10px;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
   }
 
@@ -309,8 +309,8 @@ footer {
   }
 
   .line {
-    width: 30px;
-    height: 4px;
+    width: 25px;
+    height: 2px;
     background-color: #333;
     margin: 5px;
     transition: transform 0.3s ease-in-out;
@@ -327,4 +327,69 @@ footer {
   .line.open:nth-child(3) {
     transform: rotate(45deg) translate(-5px, -6px);
   }
+
+  /* Header */
+  header h1:first-child {
+    font-size: 2.2rem;
+  }
+  header h1:nth-child(2) {
+    font-size: 1.3rem;
+  }
+
+  .header-content {
+    max-width: 100%;
+  }
+
+  /* About */
+  .about_section {
+    flex-direction: column;
+  }
+
+  .about_section img {
+    width: 20rem;
+    max-height: 20rem;
+    margin-right: 0rem;
+  }
+
+  .about_section p {
+    width: unset;
+    padding: 3rem 2.5rem 0rem 2.5rem;
+  }
+
+  /* skill */
+
+  .timeline li {
+    display: inline;
+  }
+
+  .timeline .card {
+    margin: 0rem 2rem;
+  }
+
+  .timeline .dot {
+    left: -80px;
+    top: 20px;
+  }
+
+  /* project */
+  
+.project-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0rem 10rem;
+}
+
+.project-card {
+  width: calc(50% - 10px);
+  margin-bottom: 20px;
+  text-align: center;
+  text-decoration: none;
+  color: #333;
+}
+
+.project-card img {
+  width: 100%;
+  border-radius: 6px;
+
 }
